--- a/dist.ini
+++ b/dist.ini
@@ -11,5 +11,10 @@ name=Bencher-Scenarios-PerinciSubValidateArgs
 perl=5.010001
 strict=0
 warnings=0
+Data::Sah=0
+Exporter=0
 Perinci::Sub::ValidateArgs=0
 
+[Prereqs / DevelopRecommends]
+;!lint_prereqs assume-used "spec"
+Rinci=1.1.0
