--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.001
+version=0.002
 
 name=Bencher-Scenarios-PerinciSubValidateArgs
 
@@ -14,6 +14,8 @@ warnings=0
 Data::Sah=0
 Exporter=0
 Perinci::Sub::ValidateArgs=0
+Type::Params=0
+Types::Standard=0
 
 [Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used "spec"
