Add participants: Perinci::Sub::Wrapper (PSW) and Dist::Zilla::Plugin::Rinci::Wrap (DZPRW)

--- a/dist.ini
+++ b/dist.ini
@@ -2,6 +2,9 @@ version=0.002
 
 name=Bencher-Scenarios-PerinciSubValidateArgs
 
+[Rinci::Wrap]
+include_func=foo_dzprw
+
 [Bencher::Scenario]
 
 [@Author::PERLANCAR]
