--- a/dist.ini
+++ b/dist.ini
@@ -17,9 +17,11 @@ warnings=0
 Data::Sah=0
 Exporter=0
 Perinci::Sub::ValidateArgs=0
+Perinci::Sub::Wrapper=0
 Type::Params=0
 Types::Standard=0
 
 [Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used "spec"
 Rinci=1.1.0
+
