--- a/dist.ini
+++ b/dist.ini
@@ -21,6 +21,5 @@ Perinci::Sub::Wrapper=0
 Type::Params=0
 Types::Standard=0
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used "spec"
-Rinci=1.1.0
+[Prereqs / DevelopSuggests]
+_SPEC::Rinci=1.1.0
