--- a/dist.ini
+++ b/dist.ini
@@ -21,5 +21,7 @@ Perinci::Sub::Wrapper=0
 Type::Params=0
 Types::Standard=0
 
-[Prereqs / DevelopSuggests]
-_SPEC::Rinci=1.1.0
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.0
